Alteração da logo

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <div class="footer-container">
     <div class="footer-central">
      <h4>GiLopesSlash</h4>
-     <img src="/imagens/GL-fotor-20250702234525.png" alt="Logo GiLopesSlash">
+     <img src="/imagens/Logo_GiLopes.jpg" alt="Logo GiLopesSlash">
      <p>Sua beleza é sua assinatura</p>
      <a href="https://api.whatsapp.com/send?phone=5519989041622&text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20um%20hor%C3%A1rio%F0%9F%A9%B7" 
      target="_blank" class="botao-agendar botao-footer">Agendar Agora</a>
