Alteração de Id

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                </svg>
               </div>
 
-              <p class="intro-video">Sua essência é o que te faz inesquecível</p>
+              <p class="intro-video" id="resultados-reais">Sua essência é o que te faz inesquecível</p>
 
-<section class="video-resultados" id="resultados-reais">
+<section class="video-resultados">
   <video autoplay muted loop playsinline class="video-bg">
     <source src="/Videos/video-gilopesslash.mp4" type="video/mp4">
     Seu navegador não suporta vídeo.
