--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <ul>
         <li><a href="#servicos" class="link-navegacao">Serviços</a></li>
         <li><a href="#resultados" class="link-navegacao">Resultados Reais</a></li>
-        <li><a href="#agendamento" class="link-navegacao">Agendamento</a></li>
+        <li><a href="https://api.whatsapp.com/send?phone=5519989041622&text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20um%20hor%C3%A1rio%F0%9F%A9%B7" target="_blank" class="link-navegacao">Agendamento</a></li>
       </ul>
     </div>
     </div>
