Alteração de usuário do instagram

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
       <div class="coluna">
         <h4>Siga no Instagram</h4>
          <ul>
-          <li><a href="https://www.instagram.com/__lopes11_/" target="_blank"><img src="/Icones/instagram.png" alt="Instagram"></a></li>
-          <li>@_lopes11_</li>
+          <li><a href="https://www.instagram.com/gilopesslash?igsh=MTRuMmRsZWN2MTRw" target="_blank"><img src="/Icones/instagram.png" alt="Instagram"></a></li>
+          <li>@gilopesslash</li>
          </ul>
       </div>
 
