--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <Link href="/styles/styles.css" rel="stylesheet"></Link>
     <link href="/styles/Responsive.css" rel="stylesheet"></Link>
     <link href="/styles/footer.css" rel="stylesheet">
-    <link rel="icon" href="/images/GL-fotor-20250702234525.png" type="image/png"></link>
+    <link rel="icon" href="/images/GL-fotor-20250702234525.png" type="image/png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
