Inclusão do Link

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <h4>Navegação</h4>
       <ul>
         <li><a href="#servicos" class="link-navegacao">Serviços</a></li>
-        <li><a href="#resultados" class="link-navegacao">Resultados Reais</a></li>
+        <li><a href="#titulo-digitado" class="link-navegacao">Resultados Reais</a></li>
         <li><a href="https://api.whatsapp.com/send?phone=5519989041622&text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20um%20hor%C3%A1rio%F0%9F%A9%B7" target="_blank" class="link-navegacao">Agendamento</a></li>
       </ul>
     </div>
